--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>BOOTCAMP2020</title>
 </head>
 <body>
-    <h1>WElcome To Web Development bootcamp2020</h1>
-    <p>this is Misha and this is my first page to be posted online</p>
+    <h1>Welcome To Web Development bootcamp2020</h1>
+    <p>this is Misha Akram and this is my first page to be auto deployed
+
+    </p>
     
 </body>
 </html>
