--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Welcome To Web Development bootcamp2020</h1>
-    <p>this is Misha Akram and this is my first page to be auto deployed hello world
-        
+    <p>Hello World from Misha
+
 
     </p>
     
